--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: 'arial'
+}
+
 .root {
   width: 100%;
   height: 330px;
@@ -13,7 +17,6 @@
 
 p {
 	font-size: 40px;
-	font-weight: bold;
 	margin-bottom: 0;
 }
 
@@ -50,7 +53,7 @@ p {
 	text-align: center;
 	margin-bottom: 12px;
 	font-size: 40px;
-	padding: 2px;
+	padding: 3px;
 	border-radius: 5px;
 	outline: none;
 }
@@ -70,6 +73,11 @@ p {
 .done {
 	margin-top: 145px;
 	text-align: center;
-	font-size 40px;
-	color: blue;
+}
+
+.done-btn {
+  cursor: pointer;
+  padding: 5px;
+  border-radius: 5px;
+  outline: none;
 }
